# prime-hash-brute-forcer

./: .gitignore  CMakeLists.txt  compile.sh  crc32.hpp  find_suffix_hash.cpp  force_hash_no_suffix.cpp  force_hash_suffix.cpp  main.cpp
